add @Autowired and additional request matchers