@@ -6,7 +6,7 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
 import java.math.BigInteger;
-import java.net.URL;
+import java.net.URI;
 import java.security.KeyFactory;
 import java.security.PublicKey;
 import java.security.spec.RSAPublicKeySpec;
@@ -25,7 +25,6 @@ public class ClerkJwksProvider {
     private static final long CACHE_TTL = 3600000; // 1 hour in milliseconds
 
     public PublicKey getPublicKey(String kid) throws Exception{
-
         if (keyCache.containsKey(kid) && System.currentTimeMillis() - lastFetchTime < CACHE_TTL) {
             return keyCache.get(kid);
         }
@@ -37,7 +36,7 @@ public class ClerkJwksProvider {
 
     private void refreshKeys() throws Exception {
         ObjectMapper mapper = new ObjectMapper();
-        JsonNode jwks = mapper.readTree(new URL(jwksUrl));
+        JsonNode jwks = mapper.readTree(new URI(jwksUrl).toURL());
 
         JsonNode keys = jwks.get("keys");
         for(JsonNode keyNode: keys) {
